--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "axios": "^0.26.1",
     "babel-loader": "^8.2.4",
-    "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-loader": "^0.0.5",
     "html-webpack-plugin": "^5.5.0",
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.0",
     "sass": "^1.50.1",
