--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   },
   "homepage": "https://github.com/KrisMoralesZ/curso-react#readme",
   "dependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "axios": "^0.26.1",
-    "babel-loader": "^8.2.4",
-    "html-loader": "^3.1.0",
-    "html-webpack-loader": "^0.0.5",
-    "html-webpack-plugin": "^5.5.0",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "react-router-dom": "^5.2.0",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
-    "css-loader": "^6.7.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "sass": "^1.50.1",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1"
+    "css-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.2.0",
+    "sass": "^1.38.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1"
   }
 }
